[project]
name = "klab-client-py"
version = "0.1.2"
description = "Python client to interact with a running k.LAB Engine."
authors = [
    {name = "Ferdinando Villa"},
    {name = "Andrea Antonello"},
]
dependencies = [
    "requests>=2.28.2"
]
requires-python = ">=3.8"
license = {text = "AGPLv3"}
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
homepage = "https://integratedmodelling.org/"
repository = "https://github.com/integratedmodelling/klab-client-python.git"

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
